# miaobot-qq

./: .env.prod  Dockerfile  README.md  miaobot.py  pyproject.toml  requirements.txt
.github/: docker-image.yml
.github/workflows/: docker-image.yml  docker-publish.yml
src/config/: config.py  path_config.py
src/data/: season_sub.json
src/data/resource/text/poke/: reply.json
src/data/resource/text/reply/: reply.json
src/plugins/events/: on_shutting_down.py
src/plugins/random_reply/: __init__.py  data_source.py
src/plugins/scripts/: biliCard.py  hitokoto.py  jrrp.py  parse_bilibili_info.py  random_cat.py
src/service/: __init__.py  logger.py  plugin_type.py
